4mysql-dpm-sfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-mysql
  namespace: wordpress
  labels:
    app: wordpress
    tier: db
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: db
  serviceName: "wp-mysql"
  template:
    metadata:
      labels:
        app: wordpress
        tier: db
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mysql-pvc-rwo
