4mysql-sfs2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deploym-sfs
  namespace: wordp
  labels:
    app: mysql
    tier: db
spec:
  selector:
    matchLabels:
      app: mysql
      tier: db
  serviceName: "mysql-sfs"
  template:
    metadata:
      labels:
        app: mysql
        tier: db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
      #volumes:
      #- name: data
      #  persistentVolumeClaim:
      #    claimName: mysql-pvc-rwo
