9wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wp-dpm
  namespace: wordpress
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: frontend
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wp-pvol-storage
          mountPath: /var/www/html
      volumes:
      - name: wp-pvol-storage
        persistentVolumeClaim:
          claimName: wp-pvc-rwx
