10wp-svc-clip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wp-svc-hls
  namespace: wordp
spec:
  ports:
    - port: 3306
  selector:
    app: wp-deploy
  clusterIP: None
