10wp-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
    tier: frontend
  name: wordpress
  namespace: wordpress
spec:
  ports:
  - port: 3306
  selector:
    app: wordpress
  clusterIP: None
