5mysql-svc-hls.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-sfs
  namespace: wordpress
  labels:
    app: mysql
spec:
  #clusterIP: ClusterIP
  clusterIP: None
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: db
