11wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: wordpress
  name: wp-ingress
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - backend:
          service:
            name: wp-svc-hls
            port:
              number: 80
        path: /
        pathType: Prefix
